Update wkp-ui helm chart to use new dockerhub repo

--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -3,7 +3,7 @@ fullnameOverride: ""
 
 enabled: true
 image:
-  repository: weaveworks/ui-server
+  repository: weaveworks/wkp-ui-server
   tag: master-d843e5ae
   pullSecrets: []
   pullPolicy: IfNotPresent
