Run integration tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,10 +33,10 @@ integrationTestCommonEnv: &integrationTestCommonEnv
 integrationTestConfig: &integrationTestConfig
   requires:
     - build
-  filters:
-    branches:
-      only:
-        - master
+  # filters:
+  #   branches:
+  #     only:
+  #       - master
 
 nightlyTestConfig: &nightlyTestConfig
   requires:
